[gd_scene load_steps=8 format=2]

[ext_resource path="res://DeliveryBox/DeliveryBox.gd" type="Script" id=1]
[ext_resource path="res://Gift/Assets/NecklaceGift.png" type="Texture" id=2]
[ext_resource path="res://Gift/Assets/RubberDuckyGift.png" type="Texture" id=3]
[ext_resource path="res://Gift/Assets/CakeGift.png" type="Texture" id=4]
[ext_resource path="res://Gift/Assets/PresentGift.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13.435, 23.4229 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="DeliveryBox" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.789846, 0.380648 )
shape = SubResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -13.0052
margin_top = -23.1716
margin_right = 13.9948
margin_bottom = 23.8284
color = Color( 1, 1, 1, 0.282353 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="." to="." method="_on_DeliveryBox_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_DeliveryBox_body_exited"]
